--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ./:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - "8080:80"
+      - 8080:80
     depends_on:
       - app
     networks: [bunshop]
@@ -27,6 +27,8 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - 5433:5432
     volumes:
       - dbdata:/var/lib/postgresql/data
     networks: [bunshop]
